--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js",
     "dev": "nodemon ./src/index.js",
-    "lint" : "eslint .",
+    "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0"
