--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
-    "install": "^0.13.0",
-    "jsonwebtoken": "^9.0.2",
-    "npm": "^10.9.0"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
